--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <input type="number" id="from" placeholder="from">
                     <input type="number" id="before" placeholder="before">
                     <span id="filterBtn">Filter Price</span>
+                    <input type="text" id="search">
                 </div>
-
             </div>
             <div class="content"></div>
             <div class="pagination"></div>
