--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
                 <a href="count" class="btn">Популярные</a>
             </div>
             <div class="filter">
+                <div class="filter-wrap search">
+                    <input type="text" id="search" placeholder="Search...">
+                </div>
                 <div class="filter-wrap">
                     <input type="number" id="from" placeholder="from">
                     <input type="number" id="before" placeholder="before">
                     <span id="filterBtn">Filter Price</span>
-                    <input type="text" id="search">
                 </div>
             </div>
             <div class="content"></div>
