--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <body>
+    <div>
+        <span class="pagination-block2">1</span>
+        <span class="pagination-block2">2</span>
+        <span class="pagination-block2">3</span>
+    </div> 
+    <header>
+        <div class="basket">
+            <i class="fas fa-shopping-basket"></i>
+            <span class="basket__count"></span>
+        </div>
+    </header>
     <div class="container">
         <div class="r-block">
             <div class="sorting">
@@ -31,11 +43,11 @@
             <div class="pagination"></div>
         </div>
         <div class="siteBar"></div>
-
     </div>
 
-        <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="js/script.js"></script>
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
